# COMP0188-CW2

./: .gitignore  LICENSE  README.md  pyproject.toml
src/comp0188_cw2/: dataset.py  datatypes.py  loss.py  metrics.py  models.py  utils.py  visualisation.py  workflow.py
tests/: test_dataset.py  test_datatypes.py  test_loss.py  test_metrics.py  test_models.py  test_utils.py  test_workflow.py
