[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "COMP0188-CW2"
version = "0.0.1"
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "setuptools",
    "torch",
    "torcheval",
    "torchvision",
    "tqdm",
    "wandb",
]
requires-python = ">= 3.9" # PEP 585
authors = [
  {name = "Iyassou Shimels", email = "s.iyassou@gmail.com"},
]
description = "COMP0188 Deep Representations and Learning – Coursework 2"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["VAE", "Behaviour Cloning", "Robotics", "Computer Vision"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/iyassou/COMP0188-CW2.git"